--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger100", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
+<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger115", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
@@ -41,7 +41,7 @@ Si
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://singleswantdates.com/tds/ae?tdsId=s6982pos_r&tds_campaign=s6982pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d8a90aeb&subid={Stronger}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">ENTER
+<a href="https://aoarlv.satlsfyingdates.net/?utm_source=da57dc555e50572d&ban=fb&j1=1&s1=234303&s2=2120439&s3=TheStronger" class="step-btn submit-btn tr-submit-button showmail">ENTER
 </a>
 </div>
 </div>
