--- a/index.html
+++ b/index.html
@@ -1,52 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 <head>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger115", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
+<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger116", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Mi GALERI1A AQUI</title>
-<meta content='https://i.postimg.cc/g0nwm7qL/475582776-632807172765472-5491941500500453179-n.jpg' property='og:image'/>
+<title>Întâlniri Discrete</title>
+<meta content='https://i.postimg.cc/9MWMPzyz/Whats-App-Image-2024-07-13-at-11-40-05-PM.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>Photo Gallery</title>
+<title>Galerie foto</title>
 <div class="layer">
 </div>
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
+<img src="" alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Soy masajista profesional voy a tu domicilio por horas  ¿Quieres ver mi catalogo?.?.</div>
+Ofer servicii sexuale, dans și masaje erotice la tine acasă, vrei să vezi catalogul meu?</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-No
+Da
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-Si
+Nu
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-¡Felicidades! Has sido seleccionado para conocer a una chica, para completar una cita debes registrarte en nuestra web, pulsar "ENTRAR", rellena el formulario gratuito y disfruta del sexo vaginal, orgías y mucho más... </div>
+!AVERTISMENT! Ești de acord să respecți femeile pe care le vei întâlni mai departe? Dacă cunoști pe cineva, nu le spune nimănui sau nu răspândi zvonuri.</div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://aoarlv.satlsfyingdates.net/?utm_source=da57dc555e50572d&ban=fb&j1=1&s1=234303&s2=2120439&s3=TheStronger" class="step-btn submit-btn tr-submit-button showmail">ENTER
+<a href="https://aoarlv.satlsfyingdates.net/?utm_source=da57dc555e50572d&ban=fb&j1=1&s1=234303&s2=2120439&s3=TheStronger" class="step-btn submit-btn tr-submit-button showmail">Participă
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/284460/1700583168/images/4.mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-4.mp4" type="video/mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
